<resources>
    <string name="app_name">Electrostimulator</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="colon">:</string>
    <string name="zeroTimer">0</string>
    <string name="instruction">Instruction</string>
    <string name="history">History</string>
    <string name="options">options</string>
    <string name="connection">connection</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="Choose_a_mode">Choose a mode</string>
    <string name="text1_instruction_main">To start
        working with the device synchronize your smartphone with the electostimulator
    </string>
    <string name="text2_instruction_main">Then choose the mode and input duration of work
    </string>
    <string name="text1_warning">Do not use it for longer than it is written in the instructions
    </string>
    <string name="text2_warning">Do not use the device with a cardiostimulator, hearing, artificial eye aid or similar
        devices
    </string>
    <string name="text3_warning">Do not connect contacts of electrodes to each other
    </string>
    <string name="text4_warning">Do not connect contacts of electrodes to each other
    </string>
    <string name="date">date</string>
    <string name="mode">mode</string>
    <string name="duration">duration</string>
    <string name="Options">Options</string>
    <string name="Connection">Connection</string>
    <string name="warning_red">warning red</string>
    <string name="choose_minutes_of_session">Choose minutes of session</string>
    <string-array name="made_options_list">
        <item id="1">First mode</item>
        <item id="2">Second mode</item>
        <item id="3">Third mode</item>
    </string-array>
</resources>