<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".History">
    <TextView
            android:background="#51C5A4"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:text="@string/history"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:background="#AD51C5A4"
            android:weightSum="92"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout3">
        <TextView
                android:gravity="center"
                android:text="@string/date"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView5" android:layout_weight="30"/>
        <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                />
        <TextView
                android:gravity="center"
                android:text="@string/mode"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView6" android:layout_weight="30"/>
        <View
                android:id="@+id/divider10"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                />
        <TextView
                android:gravity="center"
                android:text="@string/duration"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/textView7" android:layout_weight="30"/>
    </LinearLayout>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <View
            android:id="@+id/divider13"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TableLayout
            android:layout_gravity="top"
            android:id="@+id/tableHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/divider13">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>